@@ -29,6 +29,7 @@
             NRF52840: Create new NRF_GPIO_PIN_X_FAST as Nordic's gpio functions will no longer inline!
             Bangle.js: Make the 'home' button more configurable in code
             Bangle.js: Add Bangle.softOff to allow the RTC to keep running
+            nRF52: Allow devices to remember the time between reboots (even if RTC is reset)
  
      2v08 : nRF52: Added option to build in I2C slave support
             Fix Tensorflow aiGesture regression from 2v07 (re-add opcodes) (fix #1936)
